syntax = "proto3";

package pb.v1;

option go_package = "github.com/byorty/enterprise-application/pkg/common/gen/pbv1";

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "api/proto/v1/common.proto";
import "api/proto/v1/order.proto";

service OrderService {
    rpc Checkout(CheckoutOrderRequest) returns (Order) {
        option (google.api.http) = {
            post: "/v1/orders/{order_uuid}";
            body: "params";
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "Оплата заказа";
        };
    };
}

message CheckoutOrderRequest {
    string order_uuid = 1;
    CheckoutOrderRequestParams params = 2;
}

message CheckoutOrderRequestParams {
    double amount = 1;
    OrderStatus status = 2;
}